network_policy/sample-ns-a.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: sample-ns-a
spec: {}
status: {}
