network_policy/sample-ns-b.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: sample-ns-b
spec: {}
status: {}
