network_policy/network_policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: network-policy
  namespace: sample-ns-b
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
